--- a/pkg/osmmanager-config.cmake.in
+++ b/pkg/osmmanager-config.cmake.in
@@ -6,6 +6,6 @@ get_filename_component(_prefix "${_dir}/../.." ABSOLUTE)
 include("${_prefix}/lib/OSMManager-@version@/OSMManager-targets.cmake")
 
 # Report other information.
-set(OSMManager_INCLUDE_DIRS "${_prefix}/include/OSMManager-@version@")
+set(OSMManager_INCLUDE_DIRS "${_prefix}/include/OSMManager-@version@/")
 
 file(GLOB OSMManager_LIBRARIES "${_prefix}/lib/OSMManager-@version@/lib*")
